# claudemacs

./: .gitignore  CLAUDE_INSTRUCTIONS.md  DIR-LOCAL-TOOLS.md  LICENSE  MCP-INTEGRATION.md  Makefile  README.md  TODO.md  claudemacs-ai-magit.el  claudemacs-ai-messaging.el  claudemacs-ai-notes-todo.el  claudemacs-ai-notes.el  claudemacs-ai.el  claudemacs-cli  claudemacs-comment.el  claudemacs-prompt.md  claudemacs-sessions.el  claudemacs.el  test-env-setup.el  test-server-info.el
.claude/: settings.local.json
claudemacs_mcp/: mcp-config.json  pyproject.toml  tools.yaml  update-config.py
claudemacs_mcp/claudemacs_mcp/: cli.py  lib.py  server.py
claudemacs_mcp/tests/: __init__.py
scripts/: pretrust-directory.py
test/: claudemacs-actions-test.el  claudemacs-comment-test.el  claudemacs-e2e-test.el  claudemacs-projectile-integration-test.el  claudemacs-test.el
