[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudemacs-mcp"
version = "0.1.0"
description = "MCP server and CLI for Emacs integration with Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.21.2",
]

[project.scripts]
claudemacs-cli = "claudemacs_mcp.cli:main"
