[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudemacs-mcp"
version = "0.1.0"
description = "MCP server and CLI for Emacs integration with Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "mcp>=1.21.2",
    "pytest>=9.0.1",
    "pyyaml>=6.0",
]

[project.scripts]
claudemacs-cli = "claudemacs_mcp.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
]
